--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/react-swipeable-views": "^0.13.6",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
+    "react-swipeable-views": "^0.14.0",
     "recharts": "^2.6.2",
     "typescript": "^4.9.5"
   },
